# bro

./: .SRCINFO  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PKGBUILD  README.md  bro  cmake_install.cmake  cmakelist.txt  cmakelists.txt  compile_commands.json
.cache/clangd/index/: absorb.c.F5C24A9DEFE79CFA.idx  amend-yeet.c.3DFCE3C3F3327DC5.idx  apply-mail.c.BEFE7EAA7BC1DC10.idx  archive-vibes.c.A2BC63DA2B5DD43C.idx  blame-grep.c.4AD6A5C537602818.idx  blob.c.6A58292F6B005313.idx  bro-doctor.c.E20B4B9146908FE3.idx  clean-house.c.4D51EB7A8274E073.idx  commit.c.873D02AFB6165B33.idx  config-vibe.c.A1FD8987F4DA3C86.idx  delete-bro.c.D2C5B79BC0BBC128.idx  detective.c.7D9342F0DED8445A.idx  diff-bro.c.E691E6A1634A2F47.idx  drip.c.95FE23AEA57C272C.idx  expose.c.97F9DE3976A1A596.idx  force-launch.c.CAB5457F187187AD.idx  fuse.c.8392BA8B806B258C.idx  grep-it.c.96DB6F476E645856.idx  hard-undo.c.8D974843DE56173F.idx  hash-slap.c.AC7C7C38C0E7D955.idx  hide.c.891FCBD972CA43BE.idx  ignore-bro.c.060F2CCBBF0F3DD2.idx  index.c.F45F4C07ED38A571.idx  init.c.0A9793A06A33687A.idx  launch.c.0F4A2A3981DC3477.idx  live.c.77B99C4E16738389.idx  ls-bro.c.7F7FCC9659F4CD20.idx  main.c.0274A1628578F1AE.idx  multiverse.c.859ABE66030C3460.idx  new-squad.c.535A6D6F34CD3330.idx  nickname.c.6126877FDD2421F7.idx  object.c.F7C0DB621550B76F.idx  odb.c.39425985184F236A.idx  only-fans.c.915DFD75851D3F5A.idx  oopsie.c.BEF63FB8821A1E37.idx  panic-revert.c.299018CEFACD3CA6.idx  patch-mail.c.387D54C11C6569CF.idx  peek.c.62BB13F95E722B04.idx  range-roast.c.D9BDD977E14F7EBB.idx  reflog-yap.c.A2DD5D65FEF8076B.idx  (+35 more)
aur/bro/: .SRCINFO  .gitignore  PKGBUILD  README.md
src/: github.c  github.h  index.c  main.c  milanote_editor.c  refs.c  remote.c  repo.c  thunderbird_email.c  util.c  vim_ide.c
src/commands/: absorb.c  amend-yeet.c  apply-mail.c  archive-vibes.c  blame-grep.c  bro-doctor.c  clean-house.c  config-vibe.c  delete-bro.c  detective.c  diff-bro.c  drip.c  expose.c  force-launch.c  fuse.c  grep-it.c  hard-undo.c  hash-slap.c  hide.c  ignore-bro.c  init.c  launch.c  live.c  ls-bro.c  multiverse.c  new-squad.c  nickname.c  only-fans.c  oopsie.c  panic-revert.c  patch-mail.c  peek.c  range-roast.c  reflog-yap.c  rewind.c  rip-branch.c  roast.c  scrub.c  search-bro.c  sidekick.c  (+21 more)
src/core/: blob.c  commit.c  object.c  odb.c  sha1.c  tree.c  types.h  zlib_utils.c
